version/0.15/_sources/examples.rst.txt
Examples
########

These examples demonstrate the behavior and usage of PyAnsys Geometry.

PyAnsys Geometry 101 examples
-----------------------------
These examples demonstrate basic operations you can perform
with PyAnsys Geometry.

.. nbgallery::
    :caption: 101 examples

    examples/01_getting_started/01_math.mystnb
    examples/01_getting_started/02_units.mystnb
    examples/01_getting_started/03_sketching.mystnb
    examples/01_getting_started/04_modeling.mystnb
    examples/01_getting_started/05_plotter_picker.mystnb
    examples/01_getting_started/06_curve_surface_plotting.mystnb
    examples/01_getting_started/07_master_bodies.mystnb

Sketching examples
------------------
These examples demonstrate math operations on geometric objects
and sketching capabilities, combined with server-based operations.

.. nbgallery::
    :caption: Sketching examples

    examples/02_sketching/basic_usage.mystnb
    examples/02_sketching/dynamic_sketch_plane.mystnb
    examples/02_sketching/advanced_sketching_gears.mystnb

Modeling examples
-----------------
These examples demonstrate service-based modeling operations.

.. nbgallery::
    :caption: Modeling examples

    examples/03_modeling/add_design_material.mystnb
    examples/03_modeling/plate_with_hole.mystnb
    examples/03_modeling/cut_operation_on_extrude.mystnb
    examples/03_modeling/tessellation_usage.mystnb
    examples/03_modeling/design_organization.mystnb
    examples/03_modeling/boolean_operations.mystnb
    examples/03_modeling/scale_map_mirror_bodies.mystnb
    examples/03_modeling/sweep_chain_profile.mystnb
    examples/03_modeling/revolving.mystnb
    examples/03_modeling/export_design.mystnb
    examples/03_modeling/design_tree.mystnb
    examples/03_modeling/service_colors.mystnb
    examples/03_modeling/surface_bodies.mystnb
    examples/03_modeling/design_parameters.mystnb
    examples/03_modeling/chamfer.mystnb
    examples/03_modeling/detach_faces.mystnb

Applied examples
----------------

These examples demonstrate the usage of PyAnsys Geometry for real-world
applications.

.. nbgallery::
    :caption: Applied examples

    examples/04_applied/01_naca_airfoils.mystnb
    examples/04_applied/02_naca_fluent.mystnb
    examples/04_applied/03_ahmed_body_fluent.mystnb
    examples/04_applied/04_mechanical_named_selections.mystnb

Tools examples
--------------

These examples demonstrate how to use the tools available in PyAnsys Geometry,
such as the ``RepairTools`` class for detecting and fixing geometry issues,
the ``PrepareTools`` class for preparing geometry for simulation, and
the ``MeasurementTools`` class for measuring distances between geometric objects.


.. nbgallery::
    :caption: Tools examples

    examples/05_tools/repair_tools.mystnb
    examples/05_tools/prepare_tools.mystnb
    examples/05_tools/measurement_tools.mystnb

Miscellaneous examples
----------------------

.. nbgallery::
    :caption: Miscellaneous examples

    examples/99_misc/template.mystnb
